added more appropiate exceptions in all models